# woden-native

./: .gitignore  CMakeLists.txt  README.md
assets/materials/bricks/: brick_wall_006.wdmat
assets/materials/floor/: mossy-cobblestone.wdmat
assets/materials/roof/: roof-09.wdmat
assets/materials/sand/: coast-sand-04.wdmat
assets/materials/wood/: worn-planks.wdmat
assets/shaders/: ClearDepth.glsl  DepthOnlySceneVertexShader.glsl  EditorGridFragment.glsl  EditorGridVertex.glsl  GuiFragmentShader.glsl  GuiShaderCommon.glsl  GuiVertexShader.glsl  LightClusterBeginComputation.glsl  LightClusterListComputation.glsl  LightGridComputation.glsl  OpaqueFragmentShader.glsl  SceneFragmentShaderCommon.glsl  SceneShaderCommon.glsl  ShadowMapVertexShader.glsl  StaticSceneVertexShader.glsl  TransformLightsToView.glsl
definitions/: api.xml
editors/TrenchBroom/Woden/: GameConfig.cfg  Woden.fgd
implementations/Loader/: redirection.cpp
include/AGPU/: agpu.h  agpu_impl.hpp  agpu_impl_dispatch.inc
include/Woden/Assets/: BinaryBuffer.hpp  Font.hpp  Image.hpp  PixelFormat.hpp  QMapFile.hpp  ResourceCache.hpp  ResourceLoadingContext.hpp  Texture.hpp
include/Woden/Events/: Events.hpp
include/Woden/GameFramework/: Actor.hpp  ActorComponent.hpp  ActorFactory.hpp  ActorSceneComponent.hpp  ActorSceneComponents.hpp  ActorTickSubsystem.hpp  CharacterActor.hpp  CollisionObjectComponents.hpp  CollisionShapeComponents.hpp  InputComponents.hpp  InputSubsystem.hpp  PhysicsSubsystem.hpp  PlayerActor.hpp  SceneSubsystem.hpp  Subsystem.hpp  World.hpp
include/Woden/Math/: AABox.hpp  BVH.hpp  Frustum.hpp  GJK.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Plane.hpp  Quaternion.hpp  Ray3D.hpp  Rectangle.hpp  RigidTransform.hpp  Scalar.hpp  Sphere.hpp  TRSTransform3D.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Woden/Morphic/: BorderedMorph.hpp  Event.hpp  FileBrowser.hpp  Layout.hpp  MenuBarMorph.hpp  Morph.hpp  RootMorph.hpp  SceneMorph.hpp  SimpleButtonMorph.hpp  StatusBarMorph.hpp  StringMorph.hpp  SystemWindow.hpp  TableMorph.hpp  TextInputMorph.hpp  ToolBarMorph.hpp  WorldMorph.hpp
include/Woden/Physics/: CharacterKinematicBody.hpp  CharacterRigidBody.hpp  CollisionMasks.hpp  CollisionObject.hpp  CollisionShape.hpp  ContactManifold.hpp  ContactPoint.hpp  ForceGenerator.hpp  ForceGeneratorConstraint.hpp  (+7 more)
samples/: CMakeLists.txt  GameFrameworkSample01-CubeAndLightActor.cpp  GameFrameworkSample02-FallingBoxActor.cpp  GameFrameworkSample03-FallingBoxAndFloor.cpp  GameFrameworkSample04-FallingBoxStack.cpp  GameFrameworkSample05-Room.cpp  GameFrameworkSample06-RoomTextured.cpp  GameFrameworkSample07-CompoundRoomTextured.cpp  MorphicSample01-Empty.cpp  MorphicSample02-String.cpp  MorphicSample03-Button.cpp  MorphicSample04-VerticalButtonStack.cpp  MorphicSample05-HorizontalButtonStack.cpp  MorphicSample06-TextInputMorph.cpp  MorphicSample07-TableMorph.cpp  MorphicSample08-FileBrowser.cpp  PhysicsSample01-FallingBox.cpp  PhysicsSample02-FallingBoxAndFloor.cpp  PhysicsSample03-FallingBoxOnBox.cpp  PhysicsSample04-FallingBoxOnBox2.cpp  PhysicsSample05-SuspendedBoxWithRope.cpp  PhysicsSample06-SuspendedBoxWithRod.cpp  PhysicsSample07-FallingBoxStack.cpp  PhysicsSample08-BoxGrid.cpp  PhysicsSample09-FallingCapsuleOnBox.cpp  PhysicsSample10-Room.cpp  PhysicsSample11-CompoundRoom.cpp  Sample01-Empty.cpp  Sample02-String.cpp  Sample03-Button.cpp  SampleCommon.cpp  SampleCommon.hpp  SceneSample01-Empty.cpp  SceneSample02-Cube.cpp  SceneSample03-TexturedCube.cpp  SceneSample04-TexturedCube2.cpp  SceneSample05-ShadowCastingSpotLight.cpp  SceneSample06-ShadowCastingDirectionalLight.cpp  SceneSample07-ShadowCastingPointLight.cpp  SceneSample08-ShadowCastingMultipleLights.cpp
source-assets/maps/: test.map
src/: CMakeLists.txt
src/Assets/: BinaryBuffer.cpp  Font.cpp  Image.cpp  PixelFormat.cpp  QMapFile.cpp  ResourceCache.cpp  ResourceLoadingContext.cpp  Texture.cpp
src/Events/: Events.cpp
src/GameFramework/: Actor.cpp  ActorComponent.cpp  ActorFactory.cpp  ActorSceneComponent.cpp  ActorSceneComponents.cpp  ActorTickSubsystem.cpp  CharacterActor.cpp  CollisionObjectComponents.cpp  CollisionShapeComponents.cpp  InputComponents.cpp  InputSubsystem.cpp  PhysicsSubsystem.cpp  PlayerActor.cpp  SceneSubsystem.cpp  World.cpp
src/Math/: GJK.cpp  Matrix3x3.cpp  Vector3.cpp
src/Morphic/: BorderedMorph.cpp  Event.cpp  FileBrowser.cpp  Layout.cpp  MenuBarMorph.cpp  Morph.cpp  RootMorph.cpp  SceneMorph.cpp  SimpleButtonMorph.cpp  StringMorph.cpp  SystemWindow.cpp  TableMorph.cpp  TextInputMorph.cpp  WorldMorph.cpp
src/Physics/: CharacterKinematicBody.cpp  CharacterRigidBody.cpp  CollisionObject.cpp  CollisionShape.cpp  ContactManifold.cpp  ContactPoint.cpp  PhysicsWorld.cpp  RigidBody.cpp
src/Rendering/: Context.cpp  GuiRenderer.cpp  InfiniteGrid.cpp  LightSource.cpp  Material.cpp  MeshBuilder.cpp  MeshPrimitive.cpp  MetallicRoughnessMaterial.cpp  Renderable.cpp  RenderingScene.cpp  SceneRenderer.cpp  StaticMeshRenderable.cpp  SurfaceMaterial.cpp  VertexBinding.cpp
src/SceneGraph/: Scene.cpp
src/Utility/: FileSystem.cpp  ReadWholeFile.cpp  ShaderPreprocessor.cpp  Time.cpp
tests/: CMakeLists.txt
tests/Math/: AABox.cpp  Frustum.cpp  GJK.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Ray3D.cpp  Scalar.cpp  Sphere.cpp  TRSTransform3D.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
tests/RayCastingImage/: Main.cpp
tests/Utility/: FileSystem.cpp
tonel/AbstractGPU-GeneratedPharo/: AGPUCBindings.class.st  AGPUTypes.class.st
tonel/AbstractGPU-GeneratedSqueak/: AGPUImmediateRenderer.class.st  AGPUImmediateRendererLight.class.st  AGPUVrControllerState.class.st
tools/: CMakeLists.txt
tools/editor/: CMakeLists.txt  LevelEditor.cpp  LevelEditorMorph.cpp  LevelEditorMorph.hpp  LevelEditorSceneViewMorph.cpp  LevelEditorSceneViewMorph.hpp  LevelEditorViewEditionMode.cpp  LevelEditorViewEditionMode.hpp  LevelEditorViewMode.cpp  LevelEditorViewMode.hpp  LevelModel.cpp  LevelModel.hpp
tools/map-player/: CMakeLists.txt  MapPlayer.cpp
tools/map-viewer/: CMakeLists.txt  MapViewer.cpp
(+57 files in other folders)
