# Leng cmake build script.
cmake_minimum_required(VERSION 3.10)
project(WodenEngine)

# Check the build type
if (CMAKE_BUILD_TYPE STREQUAL "")
	# CMake defaults to leaving CMAKE_BUILD_TYPE empty. This screws up
	# differentiation between debug and release builds.
	set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Choose the type of build, options are: None (CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel." FORCE)
endif ()

## Enable testing
include(CTest)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

# Special checks for Emscripten
if(${CMAKE_SYSTEM_NAME} STREQUAL Emscripten)
    set(ON_EMSCRIPTEN TRUE)
endif()

# Output paths.
set(CMAKE_DEBUG_POSTFIX "_d")
 
set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/dist")
set(WodenEngine_DATA_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/dist/data")
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/;${CMAKE_MODULE_PATH}")

# Turn warnings and use C++ 2017.
if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
	# using Visual Studio C++
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /std:c++17")
else()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17")
	if(UNIX)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
    endif()

	# Export symbols from applications.
	#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-dynamic")
endif()

# Perform platform checks
include(${CMAKE_ROOT}/Modules/CheckIncludeFile.cmake)
include(${CMAKE_ROOT}/Modules/CheckIncludeFileCXX.cmake)
include(${CMAKE_ROOT}/Modules/CheckFunctionExists.cmake)
include(${CMAKE_ROOT}/Modules/CheckLibraryExists.cmake)

# Set output dir.
set(EXECUTABLE_OUTPUT_PATH "${WodenEngine_BINARY_DIR}/dist")
set(LIBRARY_OUTPUT_PATH "${WodenEngine_BINARY_DIR}/dist")

if(WIN32)
    set(SDL2_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/thirdparty/SDL2-2.30.8/include")
    set(SDL2_LIBRARY "${PROJECT_SOURCE_DIR}/thirdparty/SDL2-2.30.8/lib/x64/SDL2.lib")
    include_directories("${SDL2_INCLUDE_DIR}")
    set(WodenEngine_DEP_LIBS ${WodenEngine_DEP_LIBS} ${SDL2_LIBRARY})

else()
    # For VisualStudio or mingw in Window
    find_path(SDL2_INCLUDE_DIR
      NAMES SDL.h
      PATH_SUFFIXES SDL2
    )

    find_path(SDL2_LIBRARY_PATH
      NAMES SDL2.lib SDL2.a
    )

    find_library(SDL2_LIBRARY NAMES SDL2 PATHS ${SDL2_LIBRARY_PATH})
	set(SDL2_MAIN_LIBRARY "")
    
    set(WodenEngine_DEP_LIBS ${WodenEngine_DEP_LIBS} ${SDL2_MAIN_LIBRARY} ${SDL2_LIBRARY})
    
    include_directories("${SDL2_INCLUDE_DIR}")
endif()


# Add the current directory.
include_directories(
.
"${PROJECT_SOURCE_DIR}/include"
"${PROJECT_SOURCE_DIR}/thirdparty/abstract-gpu/include"
"${PROJECT_SOURCE_DIR}/thirdparty/unittest-cpp"
)

# Build the dependencies
add_subdirectory(thirdparty)

# Build the engine
add_subdirectory(src)

# Build the samples
add_subdirectory(samples)

# Build the tests
add_subdirectory(tests)
