add_executable(Sample01-Empty SampleCommon.cpp Sample01-Empty.cpp)
target_link_libraries(Sample01-Empty WodenEngine)

add_executable(Sample02-String SampleCommon.cpp Sample02-String.cpp)
target_link_libraries(Sample02-String WodenEngine)

add_executable(SceneSample01-Empty SampleCommon.cpp SceneSample01-Empty.cpp)
target_link_libraries(SceneSample01-Empty WodenEngine)

add_executable(SceneSample02-Cube SampleCommon.cpp SceneSample02-Cube.cpp)
target_link_libraries(SceneSample02-Cube WodenEngine)

add_executable(SceneSample03-TexturedCube SampleCommon.cpp SceneSample03-TexturedCube.cpp)
target_link_libraries(SceneSample03-TexturedCube WodenEngine)

add_executable(SceneSample04-TexturedCube2 SampleCommon.cpp SceneSample04-TexturedCube2.cpp)
target_link_libraries(SceneSample04-TexturedCube2 WodenEngine)

add_executable(SceneSample05-ShadowCastingSpotLight SampleCommon.cpp SceneSample05-ShadowCastingSpotLight.cpp)
target_link_libraries(SceneSample05-ShadowCastingSpotLight WodenEngine)

add_executable(SceneSample06-ShadowCastingDirectionalLight SampleCommon.cpp SceneSample06-ShadowCastingDirectionalLight.cpp)
target_link_libraries(SceneSample06-ShadowCastingDirectionalLight WodenEngine)

add_executable(SceneSample07-ShadowCastingPointLight SampleCommon.cpp SceneSample07-ShadowCastingPointLight.cpp)
target_link_libraries(SceneSample07-ShadowCastingPointLight WodenEngine)

add_executable(SceneSample08-ShadowCastingMultipleLights SampleCommon.cpp SceneSample08-ShadowCastingMultipleLights.cpp)
target_link_libraries(SceneSample08-ShadowCastingMultipleLights WodenEngine)
