## UI/Morphic samples
add_executable(Sample01-Empty SampleCommon.cpp Sample01-Empty.cpp)
target_link_libraries(Sample01-Empty WodenEngine)

add_executable(Sample02-String SampleCommon.cpp Sample02-String.cpp)
target_link_libraries(Sample02-String WodenEngine)

## Scene rendering samples.
add_executable(SceneSample01-Empty SampleCommon.cpp SceneSample01-Empty.cpp)
target_link_libraries(SceneSample01-Empty WodenEngine)

add_executable(SceneSample02-Cube SampleCommon.cpp SceneSample02-Cube.cpp)
target_link_libraries(SceneSample02-Cube WodenEngine)

add_executable(SceneSample03-TexturedCube SampleCommon.cpp SceneSample03-TexturedCube.cpp)
target_link_libraries(SceneSample03-TexturedCube WodenEngine)

add_executable(SceneSample04-TexturedCube2 SampleCommon.cpp SceneSample04-TexturedCube2.cpp)
target_link_libraries(SceneSample04-TexturedCube2 WodenEngine)

add_executable(SceneSample05-ShadowCastingSpotLight SampleCommon.cpp SceneSample05-ShadowCastingSpotLight.cpp)
target_link_libraries(SceneSample05-ShadowCastingSpotLight WodenEngine)

add_executable(SceneSample06-ShadowCastingDirectionalLight SampleCommon.cpp SceneSample06-ShadowCastingDirectionalLight.cpp)
target_link_libraries(SceneSample06-ShadowCastingDirectionalLight WodenEngine)

add_executable(SceneSample07-ShadowCastingPointLight SampleCommon.cpp SceneSample07-ShadowCastingPointLight.cpp)
target_link_libraries(SceneSample07-ShadowCastingPointLight WodenEngine)

add_executable(SceneSample08-ShadowCastingMultipleLights SampleCommon.cpp SceneSample08-ShadowCastingMultipleLights.cpp)
target_link_libraries(SceneSample08-ShadowCastingMultipleLights WodenEngine)

## Physics simulation sample
add_executable(PhysicsSample01-FallingBox SampleCommon.cpp PhysicsSample01-FallingBox.cpp)
target_link_libraries(PhysicsSample01-FallingBox WodenEngine)

add_executable(PhysicsSample02-FallingBoxAndFloor SampleCommon.cpp PhysicsSample02-FallingBoxAndFloor.cpp)
target_link_libraries(PhysicsSample02-FallingBoxAndFloor WodenEngine)

add_executable(PhysicsSample03-FallingBoxOnBox SampleCommon.cpp PhysicsSample03-FallingBoxOnBox.cpp)
target_link_libraries(PhysicsSample03-FallingBoxOnBox WodenEngine)

add_executable(PhysicsSample05-SuspendedBoxWithRope SampleCommon.cpp PhysicsSample05-SuspendedBoxWithRope.cpp)
target_link_libraries(PhysicsSample05-SuspendedBoxWithRope WodenEngine)

add_executable(PhysicsSample06-SuspendedBoxWithRod SampleCommon.cpp PhysicsSample06-SuspendedBoxWithRod.cpp)
target_link_libraries(PhysicsSample06-SuspendedBoxWithRod WodenEngine)

## Game framework samples.
add_executable(GameFrameworkSample01-CubeAndLightActor SampleCommon.cpp GameFrameworkSample01-CubeAndLightActor.cpp)
target_link_libraries(GameFrameworkSample01-CubeAndLightActor WodenEngine)

add_executable(GameFrameworkSample02-FallingBoxActor SampleCommon.cpp GameFrameworkSample02-FallingBoxActor.cpp)
target_link_libraries(GameFrameworkSample02-FallingBoxActor WodenEngine)

add_executable(GameFrameworkSample03-FallingBoxAndFloor SampleCommon.cpp GameFrameworkSample03-FallingBoxAndFloor.cpp)
target_link_libraries(GameFrameworkSample03-FallingBoxAndFloor WodenEngine)
